tests/fixtures/invalid/pow_list_int_bool.py
# Cannot call pow() with List[int], Int, Bool
x = pow([1, 2, 3], 1, True)
